# composer

./: .gitignore  .projectile  .travis.yaml  .travis.yml  DEV.rst  Makefile  README.rst  advanceplanner.py  advice.py  collectlogs.py  config.py  errors.py  filesystem.py  incrementplanner.py  planner.py  requirements.txt  reset-tests.sh  scheduling.py  setup.cfg  setup.py  templates.py  tox.ini  updateindex.py  utils.py  whatsnext.py
.github/workflows/: test.yml
composer/: advanceplanner.py  advice.py  cache.py  collectlogs.py  config.ini  config.py  errors.py  filesystem.py  planner.py  scheduling.py  templates.py  updateindex.py  utils.py  whatsnext.py
composer/backend/: __init__.py  base.py  filesystem.py
composer/errors/: __init__.py  base.py  layout.py  scheduling.py  state.py  time.py  user.py
composer/time/: __init__.py  base.py  day.py  month.py  quarter.py  week.py  year.py
composer/timeperiod/: __init__.py  base.py  day.py  interface.py  month.py  quarter.py  utils.py  week.py  year.py
docs/: composer.backend.filesystem.primitives.rst  composer.backend.filesystem.rst  composer.backend.filesystem.templates.rst  composer.backend.rst  composer.errors.rst  composer.rst  composer.timeperiod.rst  conf.py  index.rst
tests/: advanceplanner_functional_test.py  advanceplanner_unit_test.py  advice_test.py  agenda_test.py  collectlogs_test.py  fixtures.py  incrementplanner_functional_test.py  incrementplanner_unit_test.py  scheduling_test.py  templates_test.py  updateindex_test.py
tests/functional/: advanceplanner_functional_test.py
tests/unit/: fixtures.py  (+13 more)
(+28 files in other folders)
