[metadata]
description-file = README.rst

[bumpversion]
current_version = 1.0.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:composer/__init__.py]

[aliases]
test=pytest

[tool:pytest]
addopts = -p pudb -p sugar
