[bumpversion]
current_version = 3.1.1
commit = True
tag = True

[metadata]
description-file = README.rst

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:composer/__init__.py]

[aliases]
test = pytest

[tool:pytest]
addopts = -p pudb -p sugar

